--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "name": "src",
   "version": "1.0.0",
   "main": "server.js",
+  "type": "module",
   "directories": {
     "test": "test"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha --timeout 10000",
     "start": "node server.js"
   },
   "keywords": [],
